<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">Calorie Tracker</string>
    <string name="calorie_tracker">Calorie Tracker</string>
    <string name="facebook_login">Log In with Facebook</string>
    <string name="twitter_login">Log In with Twitter</string>
    <string name="sign_up_hyperlink">Doesn\'t have an account?</string>
    <string name="guest">Guest</string>
    <string name="calorie_unit_measurement">kcal</string>
    <string name="value_initial">00</string>
    <string name="distance_unit_measurement">m</string>
    <string name="button_start">Start</string>
    <string name="action_settings">Akun</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tracker">TrackerActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="set_target">Atur Target</string>
    <string name="fb_share">f</string>
    <string name="tweet_share">t</string>
    <string name="title_activity_set_target">SetTargetActivity</string>

    <string name="kalori">Kalori</string>
    <string name="kalori_input">Kalori</string>
    <string name="jarak">Jarak</string>
    <string name="waktu">Waktu</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>

    <string-array name="spinner_waktu">
        <item>Harian</item>
        <item>Mingguan</item>
    </string-array>
    <string name="waktu_prompt">Pilih Waktu</string>

    <string android:name="com.twitter.sdk.android.CONSUMER_KEY">sZVKFlomUMdCQOuctgzEj8ODD</string>
    <string android:name="com.twitter.sdk.android.CONSUMER_SECRET">	T32Su8HrnpJ78gWc1Ctfg2Q2IqOqfU7SoK0QwNZDmk1pk0VPv6</string>

    <string name="facebook_app_id">166207887434856</string>
    <string name="fb_login_protocol_scheme">fb166207887434856</string>
    <string name="history_calory">Calori</string>
    <string name="history_distance">Distance</string>
    <string name="history_time">Date</string>
    <string name="title_activity_history">History</string>
    <string name="stop_button">Stop</string>

</resources>
