<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.calorietracker.SignIn">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="18sp"
        android:text="@string/calorie_tracker"
        android:textSize="32sp" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#55acee"
        android:text="@string/twitter_login"
        android:textColor="#ffffff"/>


    <TextView
        android:id="@+id/signup_hyperlink_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/sign_up_hyperlink" />

    <Button
        android:id="@+id/guest_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:onClick="guestLogin"/>
</LinearLayout>
