<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.calorietracker.SetTargetActivity"
    tools:showIn="@layout/activity_set_target">

    <LinearLayout
        android:id="@+id/kalori"
        android:padding="3dp"
        android:layout_margin="1dp"
        android:orientation="horizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/kalori_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kalori"/>
        <EditText
            android:inputType="number"
            android:id="@+id/input_kalori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kalori_input"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/kalori"
        android:id="@+id/jarak"
        android:padding="3dp"
        android:layout_margin="1dp"
        android:orientation="horizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/kalori_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jarak"/>
        <EditText
            android:inputType="number"
            android:id="@+id/input_jarak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jarak"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/waktu"
        android:layout_below="@+id/jarak"
        android:padding="3dp"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/kalori_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waktu"/>
        <Spinner
            android:id="@+id/input_waktu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_waktu"
            android:prompt="@string/waktu_prompt"
            />

    </LinearLayout>

    <Button
        android:layout_below="@+id/waktu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/save"
        android:layout_alignParentEnd="true"
        android:onClick="saveTarget"/>

</RelativeLayout>
