<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.android.calorietracker.TrackerGuest">

    <TextView
        android:id="@+id/calorie_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00"
        android:textSize="108sp"/>

    <TextView
        android:id="@+id/calorie_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie_unit_measurement"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/distance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_unit_measurement"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:onClick="trackStart"
            android:visibility="visible"/>
        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"
            android:onClick="trackStop"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>
