<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.calorietracker.HistoryActivity">

    <TableLayout
        android:id="@+id/table_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/history_time" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/history_distance" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:padding="3dip"
                android:text="@string/history_calory" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/table_history">

        <TableLayout
            android:id="@+id/table_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

        </TableLayout>
    </ScrollView>


</LinearLayout>

